--- a/application/config/config.ini
+++ b/application/config/config.ini
@@ -1,7 +1,7 @@
 ;Comentario en .ini
 
 [production]
-filename = 'usuarios.txt';
+usersFilename = 'usuarios.txt';
 
 [developer:production]
-filename = 'usuarios_dev.txt';
+usersFilename = 'usuarios_dev.txt';
