--- a/application/config/config.ini
+++ b/application/config/config.ini
@@ -1,7 +1,11 @@
 ;Comentario en .ini
 
 [production]
-usersFilename = 'usuarios.txt';
+	db.server = "localhost";
+	db.database = "mydb";
+	db.user = "root";
+	db.password = "";
+
 
 [developer:production]
 usersFilename = 'usuarios_dev.txt';
